# HP-aided-MPC-with-GOD

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  async_asterisk_god_mpc.sh  async_asterisk_god_offline.sh  async_asterisk_god_online.sh  async_asterisk_mpc.sh  async_asterisk_offline.sh  async_asterisk_online.sh  async_asterisk_ope.sh  delay_god.sh  mpc.sh  offline.sh  online.sh  online_cheaters.sh  sync_asterisk_god_mpc.sh  sync_asterisk_god_offline.sh  sync_asterisk_god_online.sh
benchmark/: CMakeLists.txt  alhena_mpc.cpp  alhena_offline.cpp  alhena_online.cpp  alhena_online_cheaters.cpp  alhena_ope.cpp  dm_asterisk_god_mpc.cpp  dm_async_asterisk_god_mpc.cpp  dm_async_asterisk_god_offline.cpp  dm_async_asterisk_god_online.cpp  dm_async_asterisk_god_ope.cpp  dm_async_asterisk_mpc.cpp  dm_async_asterisk_offline.cpp  dm_async_asterisk_online.cpp  dm_async_asterisk_ope.cpp  dm_sync_asterisk_god_mpc.cpp  dm_sync_asterisk_god_offline.cpp  dm_sync_asterisk_god_online.cpp  dm_sync_asterisk_god_ope.cpp  hm_async_asterisk_mpc.cpp  hm_async_asterisk_offline.cpp  hm_async_asterisk_online.cpp  utils.cpp  utils.h  wasat_mpc.cpp  wasat_offline.cpp  wasat_ope.cpp
src/: CMakeLists.txt
src/asyncAsterisk/: dm_offline_evaluator.cpp  dm_offline_evaluator.h  dm_online_evaluator.cpp  dm_online_evaluator.h  dm_preproc.h  dm_sharing.h  dmgod_offline_evaluator.cpp  dmgod_offline_evaluator.h  dmgod_online_evaluator.cpp  dmgod_online_evaluator.h  dmgod_preproc.h  dmgod_sharing.h  hm_offline_evaluator.cpp  hm_offline_evaluator.h  hm_online_evaluator.cpp  hm_online_evaluator.h  hm_preproc.h  hm_sharing.h  ot_provider.cpp  ot_provider.h  ot_provider_ha.cpp  ot_provider_ha.h  rand_gen_pool.cpp  rand_gen_pool.h
src/io/: netmp.h
src/protocols/: offline_phase.cpp  offline_phase.h  online_phase.cpp  online_phase.h  ot_provider_ha.cpp  ot_provider_ha.h  preproc.h  rand_gen_pool.cpp  rand_gen_pool.h  sharing.h
src/utils/: circuit.cpp  circuit.h  helpers.cpp  helpers.h  types.cpp  types.h
test/: CMakeLists.txt  dm_god_mpc.cpp  dm_offline.cpp  dm_online.cpp  dm_sharing.cpp  dmgod_online.cpp  hm_offline.cpp  hm_online.cpp  hm_sharing.cpp  io.cpp  mpc.cpp  ot.cpp  rand.cpp  utils.cpp
